src/objects/MiscellaneousBaseSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Miscellaneous settings used by GWBase.</description>
    <fields>
        <fullName>Campaign_Member_Status_Donated__c</fullName>
        <defaultValue>&quot;Donated&quot;</defaultValue>
        <inlineHelpText>The Campaign Member Status value to use for a contact that donates due to a campaign.</inlineHelpText>
        <label>Campaign Member Status Donated</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Help_Docs_Password__c</fullName>
        <inlineHelpText>Password for the Groundwire help documentation site.</inlineHelpText>
        <label>GW Help Docs Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Help_Docs_Username__c</fullName>
        <inlineHelpText>Username for the Groundwire help documentation site.</inlineHelpText>
        <label>GW Help Docs Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Account_Id__c</fullName>
        <inlineHelpText>In order to increase code efficiency, set this to the 15 character Salesforce ID of the Individual account.</inlineHelpText>
        <label>Individual Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Account_Name__c</fullName>
        <defaultValue>&quot;Individual&quot;</defaultValue>
        <inlineHelpText>The name of the account that Contacts without an Organization should be added to.</inlineHelpText>
        <label>Individual Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Change_Wizard_Relationship__c</fullName>
        <defaultValue>&quot;Employee&quot;</defaultValue>
        <inlineHelpText>The relationship the Job Change Wizard uses for the previous employer.</inlineHelpText>
        <label>Job Change Wizard Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Converter_Account_Name_Not_Provided__c</fullName>
        <defaultValue>&quot;[not provided]&quot;</defaultValue>
        <inlineHelpText>The Organization name for Leads where the Organization is unknown. These will be added to the Individual account.</inlineHelpText>
        <label>Lead Converter Account Name Not Provided</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Miscellaneous Base Settings</label>
</CustomObject>